9 contrast fixed

--- a/css/dr4uaccessible.css
+++ b/css/dr4uaccessible.css
@@ -32,3 +32,8 @@ body .page-wrapper .page-footer .footer-copyright-wrapper {
     background: #000000 !important;
 }
 
+.elementor-1750 .elementor-element.elementor-element-5309b308.elementor-widget-heading .elementor-heading-title {
+    color: #000000 !important;
+    background-color: #ffffff !important;
+}
+
